<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/task_menu_item"
        android:title="@string/tasks"
        android:checkable="false">
        <menu>
            <item
                android:id="@+id/view_tasks_menu_item"
                android:icon="@drawable/ic_baseline_checklist_24"
                android:title="@string/view_tasks"
                android:checkable="true" />
            <item
                android:id="@+id/add_task_menu_item"
                android:icon="@drawable/ic_baseline_add_task_24"
                android:title="@string/add_task"
                android:checkable="true"/>
        </menu>
    </item>
    <item
        android:id="@+id/ally_menu_item"
        android:title="@string/allies"
        android:checkable="false">
        <menu>
            <item
                android:id="@+id/add_ally_menu_item"
                android:icon="@drawable/ic_baseline_person_add_24"
                android:title="@string/add_ally"
                android:checkable="true"/>
            <item
                android:id="@+id/view_ally_menu_item"
                android:icon="@drawable/ic_baseline_people_24"
                android:title="@string/view_allies"
                android:checkable="true"/>
            <item
                android:id="@+id/remind_ally_menu_item"
                android:icon="@drawable/ic_baseline_alarm_24"
                android:title="@string/remind_ally"
                android:checkable="true"/>
        </menu>
    </item>
</menu>